Fix border bottom alignment issue

--- a/static/less/push-to-card.less
+++ b/static/less/push-to-card.less
@@ -20,7 +20,9 @@
 	}
 
 	.summary {
-		border-bottom: 2px solid @gray2;
+		.signup-group {
+			border-bottom: 2px solid @gray2;
+		}
 
 		.page-summary {
 			a {
